# test

./: .gitignore  Cargo.toml  README.md  build.rs  test_task.meta.txt  test_task.opt.wasm
src/: io.rs  lib.rs
