[package]
name = "test-task"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "full"] }
gmeta = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
gmeta = { git = "https://github.com/gear-tech/gear.git" }
gstd = { git = "https://github.com/gear-tech/gear.git" }

[features]
default = ["std"]
std = ["codec/std"]